# ODIN

./: .gitignore  Algoritm_Path.hpp  CMakeLists.txt  Dockerfile  Header.hpp  Python_include.cpp  Python_include.hpp  README.md  StorageManager.cpp  Storage_Manager.cpp  Storage_Manager.hpp  algoritm.cpp  docker-compose.yml  headerAlgoritm.hpp  main.cpp  package.json  requirements.txt
backend/: requirements.txt  setup.py
backend/alembic/: env.py
backend/app/: main.py  routing_engine.cp312-win_amd64.pyd
backend/app/api/: locations.py
backend/app/api/routers/: clients.py  companies.py  company.py  directors.py  dispatchers.py  drivers.py  managers.py  orders.py  request.py  requests.py  warehouses.py
backend/app/auth/: router.py
backend/app/core/: dependencies.py
backend/app/crud/: client.py  clients.py  company.py  director.py  driver.py  manager.py  order.py  transport.py  user.py
backend/app/database/: __init__.py  database.py  models.py  schemas.py  session.py
backend/cpp_engine/: CMakeLists.txt
backend/cpp_engine/include/: Header.hpp  StorageManager.hpp  headerAlgoritm.hpp
backend/cpp_engine/includes/: Algorithm_Path.hpp  Algoritm_Path.hpp  Python_include.hpp  Storage_Manager.hpp
backend/cpp_engine/src/: Algorithm_Path.cpp  Python_include.cpp  Storage_Manager.cpp  algoritm.cpp
frontend/: app.css  index.html  style.css
greenroad-app/: index.html  package-lock.json  package.json
greenroad-app/src/: App.css  App.jsx  index.css
greenroad-app/src/api/: api.js  auth.js
greenroad-app/src/components/: Auth.jsx  Clients.jsx  Companies.jsx  Directors.jsx  Drivers.jsx  Managers.jsx  Orders.jsx
greenroad-app/src/context/: AppContext.jsx
greenroad-app/src/pages/: AdminPage.jsx  ForgotPasswordPage.jsx  HomePage.jsx  LiveMap.jsx  LoginPage.jsx  ManagerDashboard.jsx  RegisterPage.jsx
